# opus-benchmark

./: .env.example  .gitignore  API.md  DEVELOPER.md  PROJECT_SUMMARY.md  README.md  SCORING.md  pyproject.toml  requirements.txt
data/tatoeba/: el-en.txt  en-ar.txt  en-bg.txt  en-cs.txt  en-da.txt  en-et.txt  en-id.txt  en-ko.txt  en-lt.txt  en-lv.txt  en-pl.txt  en-ro.txt  en-sl.txt  en-sv.txt  en-th.txt  en-vi.txt
src/: __init__.py
src/api/: __init__.py  openrouter.py  opus_api.py
src/cli/: __init__.py  main.py
src/config/: languages.py
src/data/: __init__.py  zip_converter.py
src/evaluation/: __init__.py  metrics.py  multi_evaluator.py
src/llm/: __init__.py  translator.py
src/reporting/: __init__.py  html_report.py  multi_report.py
src/utils/: config.py
templates/: report.html.j2
